# protollm-api

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deploy/worker-api/: Dockerfile  requirements.txt
deploy/worker-llama-cpp/: Dockerfile
examples/: backend.py
protollm_api/backend/: broker.py  config.py  main.py
protollm_api/backend/bll/: __init__.py
protollm_api/backend/bll/services/: base.py  chat_complition.py  generate.py
protollm_api/backend/endpoints/: async_chat.py  sync_chat.py
protollm_api/backend/models/: job_context_models.py
protollm_api/models/: utils.py
protollm_api/object_interface/: __init__.py
protollm_api/object_interface/message_queue/: base.py  rabbitmq_adapter.py  redis_adapter.py
protollm_api/object_interface/result_storage/: __init__.py  base.py  models.py  redis_storage.py
protollm_api/worker/: config.py  main.py
protollm_api/worker/models/: base.py  cpp_models.py  fake_models.py  open_api_llm.py  vllm_models.py
protollm_api/worker/services/: broker.py
temp/llm-api/: Dockerfile
temp/llm-worker/: README.md  main.py
tests/: conftest.py  test_brocker.py  test_endpoints.py
tests/object_interface/message_queue/: test_rabbitmq_adapter.py  test_redis_adapter.py
tests/object_interface/result_storage/: test_models.py  test_redis_storage.py
tests/unit/: test_brocker.py
