[tool.poetry]
name = "protollm-api"
version = "1.0.5"
description = ""
authors = ["aimclub"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
redis = "^6.2.0"
pika = "^1.3.2"
pydantic = "^2.11.7"
flower = "^2.0.1"
aioredis = "^2.0.1"

[tool.poetry.group.api.dependencies]
fastapi = "^0.116.1"

[tool.poetry.group.dev.dependencies]

pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
uvicorn = "^0.35.0"

[tool.poetry.group.llama-cpp.dependencies]
#llama-cpp-python = "^0.3.3"

[tool.poetry.group.openai.dependencies]
openai = "^1.95.1"
